Fix width of iframe and img tags on mobile

--- a/css/pages.css
+++ b/css/pages.css
@@ -202,7 +202,7 @@ iframe#hmd {
 	}
 
 	.content-wrapper iframe {
-		width: 100%;
+		width: 90%;
 	}
 
 	.row {
@@ -210,8 +210,8 @@ iframe#hmd {
 		padding-right: 5%;
 	}
 
-	img {
-		width: 100%;
+	.content-wrapper img {
+		width: 90%;
 	}
 
 	.content-wrapper p {
